--- a/sormas-api/src/main/resources/captions.properties
+++ b/sormas-api/src/main/resources/captions.properties
@@ -394,6 +394,7 @@ CaseData.quarantineReasonBeforeIsolationDetails=Other reason
 CaseData.endOfIsolationReason=Reason for end of isolation
 CaseData.endOfIsolationReasonDetails=Other reason
 CaseData.sormasToSormasOriginInfo=Shared by
+CaseData.otherCaseOutcomeDetails=Specify Outcome
 
 # CaseExport
 CaseExport.address=Address
