Added the Other value to the case outcome enum values

--- a/sormas-api/src/main/resources/enum.properties
+++ b/sormas-api/src/main/resources/enum.properties
@@ -132,6 +132,8 @@ CaseOutcome.DECEASED = Deceased
 CaseOutcome.NO_OUTCOME = No Outcome Yet
 CaseOutcome.RECOVERED = Recovered
 CaseOutcome.UNKNOWN = Unknown
+CaseOutcome.OTHER = Other
+
 
 # CauseOfDeath
 CauseOfDeath.EPIDEMIC_DISEASE = Epidemic disease
