--- a/sormas-api/src/main/resources/captions.properties
+++ b/sormas-api/src/main/resources/captions.properties
@@ -317,6 +317,7 @@ CaseData.notifyingClinic=Notifying clinic
 CaseData.notifyingClinicDetails=Notifying clinic details
 CaseData.numberOfVisits=Number of visits
 CaseData.outcome=Outcome of case
+CaseData.specifyOtherOutcome=Specify outcome
 CaseData.outcomeDate=Date of outcome
 CaseData.person=Case person
 CaseData.personFirstName=First name
