Added Health facility to the caption

--- a/sormas-api/src/main/resources/captions.properties
+++ b/sormas-api/src/main/resources/captions.properties
@@ -763,6 +763,7 @@ dashboardContactClassificationChart=Contact Classification Chart
 dashboardFollowUpUntilChart=Follow-Up Until Chart
 dashboardShowPercentageValues=Show percentage values
 dashboardShowTotalValues=Show total values
+dashboardHealthFacilities=Health Facilities
 
 defaultRegion=Default Region
 defaultDistrict=Default District
