--- a/sormas-api/src/main/resources/captions.properties
+++ b/sormas-api/src/main/resources/captions.properties
@@ -1957,3 +1957,10 @@ patientDiaryRegistrationError=Could not register person in the patient diary.
 patientDiaryPersonNotExportable=Cannot export the person to the patient diary. The person needs a valid birthdate and either a valid phone number or email address.
 
 showPlacesOnMap=Show
+
+# EntityAuditLogComponent
+EntityAuditLogComponent.heading = User activities
+EntityAuditLogComponent.noActivities = No activities found
+EntityAuditLogComponent.filters=Filters
+EntityAuditLogComponent.showUniqueActivities=Show distinct activities only
+EntityAuditLogComponent.selectActivities=Show these activities
