--- a/sormas-api/pom.xml
+++ b/sormas-api/pom.xml
@@ -11,6 +11,16 @@
 
 	<build>
 		<finalName>${project.artifactId}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
         <resources>
 			<resource>
 				<directory>src/main/resources</directory>
