Added the caption of the new column added, New or Existing.

--- a/sormas-api/src/main/resources/captions.properties
+++ b/sormas-api/src/main/resources/captions.properties
@@ -365,6 +365,7 @@ CaseData.epiData=Epidemiological data
 CaseData.epidNumber=EPID number
 CaseData.externalID=External ID
 CaseData.externalToken=External Token
+CaseData.existingCase=Existing or New Case
 CaseData.facilityType=Facility type
 CaseData.healthFacility=Facility
 CaseData.healthFacilityDetails=Facility name & description
