WIP Working on the card, disease grid table layout...

--- a/sormas-api/src/main/resources/captions.properties
+++ b/sormas-api/src/main/resources/captions.properties
@@ -219,6 +219,8 @@ convertEventParticipantToCase=Create case from event participant with positive t
 convertContactToCase=Create case from contact with positive test result?
 caseSearchSpecificCase=Search specific case
 caseSearchCase=Search case
+caseDeathCase=Deaths
+caseRecoveredCase=Recovered Cases
 
 CaseData=Case
 CaseData.additionalDetails=General comment
