--- a/sormas-api/src/main/resources/strings.properties
+++ b/sormas-api/src/main/resources/strings.properties
@@ -80,7 +80,7 @@ classificationClassificationRules = SORMAS Case Classification Rules
 classificationConfirmed = Confirmed Classification
 classificationCriteriaForTestType = for test type
 classificationDaysBeforeCaseStart = days before symptom onset/case report date
-classificationForDisease = for
+classificationForDisease = Disease details
 classificationGeneratedFor = Generated for SORMAS
 classificationInfoText = ... when the case meets the following requirements:<br/>
 classificationInfoNumberText = ... when the case meets <b>%s</b> of the following requirements:<br/>
