Added the disease details needed by the components

--- a/sormas-api/src/main/resources/captions.properties
+++ b/sormas-api/src/main/resources/captions.properties
@@ -546,6 +546,8 @@ dashboardData=Data
 dashboardDead=Dead
 dashboardDiscarded=Discarded
 dashboardDiseaseBurdenInfo=Disease Burden Information
+dashboardRegionalDiseaseBurden=Regional Disease Burden
+diseaseDetailMap=Disease Detail Map
 dashboardDiseaseBurdenOutbreakDistricts=Outbreak Districts
 dashboardDiseaseCarouselSlideShow=slide show
 dashboardDiseaseDifference=Difference in Number of Cases
@@ -1629,6 +1631,7 @@ View.contacts.visits=Contact Visits
 
 View.dashboard.contacts=Contacts Dashboard
 View.dashboard.surveillance=Surveillance Dashboard
+View.dashboard.disease=Disease Dashboard
 
 View.events=Event Directory
 View.events.archive=Event Archive
@@ -1657,6 +1660,7 @@ View.users.sub=
 
 # Visit
 visitNewVisit=New visit
+viewMore=View More
 
 Visit=Visit
 Visit.person=Visited person
