#1281 - Added StatisticsCases=cases,StatisticsContacts = contacts, showContactIncidence,View.statistics.contacts,View.statistics.cases

--- a/sormas-api/src/main/resources/captions.properties
+++ b/sormas-api/src/main/resources/captions.properties
@@ -1872,6 +1872,8 @@ statisticsAttributeSelect=Select an attribute
 statisticsAttributeSpecification=Attribute specification
 statisticsChartType=Chart type
 statisticsDatabaseExport=Database Export
+statisticsContacts =Contacts
+statisticsCases = Cases 
 statisticsDontGroupColumns=Don't group columns
 statisticsDontGroupRows=Don't group rows
 statisticsDontGroupSeries=Don't group series
@@ -1882,6 +1884,7 @@ statisticsRemoveFilter=Remove filter
 statisticsResetFilters=Reset filters
 statisticsShowZeroValues=Show zero values
 statisticsShowCaseIncidence=Show case incidence
+statisticsShowContactIncidence =Show contact incidence
 statisticsSpecifySelection=Specify your selection
 statisticsStatistics=Statistics
 statisticsVisualizationType=Type
@@ -2258,6 +2261,8 @@ View.samples.sub=
 
 View.statistics=Statistics
 View.statistics.database-export=Database export
+View.statistics.contacts =Contact Statistics
+View.statistics.cases =Cases Statistics
 
 View.tasks=Task Management
 View.tasks.archive=Task Archive
