--- a/sormas-api/src/main/resources/enum.properties
+++ b/sormas-api/src/main/resources/enum.properties
@@ -175,6 +175,8 @@ ScreeningType.OTHER = Other
 
 CaseCountOrIncidence.CASE_COUNT = Case count
 CaseCountOrIncidence.CASE_INCIDENCE = Case incidence
+ContactCountOrIncidence.CONTACT_COUNT = Contact count
+ContactCountOrIncidence.CONTACT_INCIDENCE = Contact incidence
 	
 # CaseMeasure
 CaseMeasure.CASE_COUNT = Case count
@@ -218,6 +220,7 @@ ContactClassification.Short.CONFIRMED = Confirmed
 ContactClassification.Short.NO_CONTACT = No contact
 ContactClassification.Short.UNCONFIRMED = Unconfirmed
 
+
 # ContactDateType
 ContactDateType.REPORT_DATE = Report date
 ContactDateType.LAST_CONTACT_DATE = Last contact date
@@ -260,6 +263,51 @@ ContactRelation.OTHER = Other
 ContactStatus.ACTIVE = Active contact
 ContactStatus.CONVERTED = Converted to case
 ContactStatus.DROPPED = Dropped
+
+# StatisticsContactAttribute
+StatisticsContactAttribute.AGE_INTERVAL_1_YEAR= Age stratification: 1 year intervals
+StatisticsContactAttribute.AGE_INTERVAL_5_YEARS= Age stratification: 5 year intervals
+StatisticsContactAttribute.AGE_INTERVAL_BASIC= Age stratification: basic
+StatisticsContactAttribute.AGE_INTERVAL_CHILDREN_COARSE= Age stratification: children coarse
+StatisticsContactAttribute.AGE_INTERVAL_CHILDREN_FINE= Age stratification: children fine
+StatisticsContactAttribute.AGE_INTERVAL_CHILDREN_MEDIUM= Age stratification: children medium
+StatisticsContactAttribute.CLASSIFICATION = Classification
+StatisticsContactAttribute.DISEASE = Disease
+StatisticsContactAttribute.ONSET_TIME = Onset time
+StatisticsContactAttribute.OUTCOME = Outcome
+StatisticsContactAttribute.OUTCOME_TIME = Outcome time
+StatisticsContactAttribute.JURISDICTION = Region / District / Community / Facility
+StatisticsContactAttribute.REPORT_TIME = Report time
+StatisticsContactAttribute.REPORTING_USER_ROLE = Reporting user role
+StatisticsContactAttribute.SEX = Sex
+StatisticsContactAttribute.STATUS = Status
+StatisticsContactAttribute.PLACE_OF_RESIDENCE = Place of residence
+
+# StatisticsContactAttributeGroup
+StatisticsContactAttributeGroup.CONTACT = Contact
+StatisticsContactAttributeGroup.PERSON = Person
+StatisticsContactAttributeGroup.PLACE = Place
+StatisticsContactAttributeGroup.TIME = Time
+
+# StatisticsContactSubAttribute
+StatisticsContactSubAttribute.DATE_RANGE = Date range
+StatisticsContactSubAttribute.DISTRICT = District
+StatisticsContactSubAttribute.EPI_WEEK = Epi week
+StatisticsContactSubAttribute.EPI_WEEK_OF_YEAR = Epi week of year
+StatisticsContactSubAttribute.MONTH = Month
+StatisticsContactSubAttribute.MONTH_OF_YEAR = Month of year
+StatisticsContactSubAttribute.QUARTER = Quarter
+StatisticsContactSubAttribute.QUARTER_OF_YEAR = Quarter of year
+StatisticsContactSubAttribute.REGION = Region
+StatisticsContactSubAttribute.YEAR = Year
+StatisticsContactSubAttribute.COMMUNITY = Community
+StatisticsContactSubAttribute.FACILITY = Facility
+StatisticsContactSubAttribute.PERSON_REGION = Person's region
+StatisticsContactSubAttribute.PERSON_DISTRICT = Person's district
+StatisticsContactSubAttribute.PERSON_COMMUNITY = Person's community
+StatisticsContactSubAttribute.PERSON_CITY = Person's city
+StatisticsContactSubAttribute.PERSON_POSTCODE = Person's postcode
+StatisticsContactSubAttribute.PERSON_ADDRESS = Person's address
 
 ConveyanceType.CAR = Car
 ConveyanceType.BUS = Bus
