--- a/sormas-api/src/main/resources/strings.properties
+++ b/sormas-api/src/main/resources/strings.properties
@@ -622,9 +622,13 @@ infoImportSimilarity = One of the cases you tried to import is similar to an alr
 infoLostToFollowUpBy = Set to lost to follow-up by %s using bulk action
 infoNoAdditionalTests = No additional tests have been created for this sample
 infoNoCasesFoundStatistics = No cases have been found for the selected filters and visualization options.
+infoNoContactsFoundStatistics = No contacts have been found for the selected filters and visualization options.
 infoCaseIncidenceNotPossible = The following regions have missing population data:<br/><br/>%s.<br/><br/>As a result, case incidence cannot be calculated and case counts are displayed instead.
+infoContactIncidenceNotPossible = The following regions have missing population data:<br/><br/>%s.<br/><br/>As a result, contact incidence cannot be calculated and contact counts are displayed instead.
 infoCaseIncidenceMissingPopulationData = The following regions and/or districts have missing population data:<br/><br/>%s.<br/><br/>Incidence proportion cannot be calculated for these regions and/or districts.
+infoContactIncidenceMissingPopulationData = The following regions and/or districts have missing population data:<br/><br/>%s.<br/><br/>Incidence proportion cannot be calculated for these regions and/or districts.
 infoCaseIncidenceIncompatible = No population data is available for communities and facilities. Case incidence cannot be calculated and case counts are displayed instead. If you want to view case incidence, please remove any community and facilitiy filters and groupings.
+infoContactIncidenceIncompatible = No population data is available for communities and facilities. Contact incidence cannot be calculated and contact counts are displayed instead. If you want to view contact incidence, please remove any community and facilitiy filters and groupings.
 infoNoPathogenTests = No pathogen tests have been created for this sample
 infoPickOrCreateCase = There are existing cases in the database that seem very similar to the one you are about to create. Please have a look at the list of existing cases and verify that the case you want to create is not a duplicate of one of them. If you find a case that is most likely the same as yours, please <b>click on it in the list</b> and confirm.
 infoPickOrCreateCaseNewCase = Newly added case information
@@ -633,8 +637,10 @@ infoPickOrCreateSample = The database already contains at least one sample that 
 infoSampleAdditionalTesting = Please tick every type of additional test you would like to be performed on this sample.
 infoSampleExport = Export the samples of all cases displayed in the table rows with an extended set of columns. This may take a while.
 infoSamplePathogenTesting = Please tick every type of pathogen test you would like to be performed on this sample.
+infoStatisticsContactDisclaimer = All statistics on this page are aggregated data of the whole country. This includes contacts you might not have read and write access to and therefore are not visible in the contact directory.
 infoStatisticsDisclaimer = All statistics on this page are aggregated data of the whole country. This includes cases you might not have read and write access to and therefore are not visible in the case directory.
 infoStatisticsFilter = Add filters to restrict the aggregated data.<br/>If you use multiple filters, only cases that pass all restrictions will be aggregated.
+infoContactsStatisticsFilter = Add filters to restrict the aggregated data.<br/>If you use multiple filters, only contacts that pass all restrictions will be aggregated.
 infoStatisticsResults = Click the "Generate" button to create a new table, map or chart.
 infoSurveillanceDashboard = All Dashboard elements that display cases (the "New Cases" statistics, the Epidemiological Curve and the Case Status Map) use the onset date of the first symptom for the date/epi week filter. If this date is not available, the date of report is used instead.
 infoCampaignsDashboard=All Dashboard elements that display campaign diagrams.
@@ -729,6 +735,7 @@ messageCaseArchived = Case has been archived
 messageCaseCreated = New case created
 messageCaseDearchived = Case has been de-archived
 messageCaseDuplicateDeleted = The duplicate case has been deleted.
+messageContactIncidenceUnsupportedAgeGroup = Contact incidence proportion can only be generated for 5 year intervals. Please remove all other age stratification filters and visualization groupings.
 messageCaseIncidenceUnsupportedAgeGroup = Case incidence proportion can only be generated for 5 year intervals. Please remove all other age stratification filters and visualization groupings.
 messageCaseReferredFromPoe = Case has been referred to the specified facility
 messageCaseRelationToEventWithoutDisease=It is not possible to link a case to an event if the disease of the event has not been set
