#1281 - Deleted duplicate code

--- a/sormas-api/src/main/resources/enum.properties
+++ b/sormas-api/src/main/resources/enum.properties
@@ -289,26 +289,6 @@ StatisticsContactAttributeGroup.PERSON = Person
 StatisticsContactAttributeGroup.PLACE = Place
 StatisticsContactAttributeGroup.TIME = Time
 
-# StatisticsContactSubAttribute
-StatisticsContactSubAttribute.DATE_RANGE = Date range
-StatisticsContactSubAttribute.DISTRICT = District
-StatisticsContactSubAttribute.EPI_WEEK = Epi week
-StatisticsContactSubAttribute.EPI_WEEK_OF_YEAR = Epi week of year
-StatisticsContactSubAttribute.MONTH = Month
-StatisticsContactSubAttribute.MONTH_OF_YEAR = Month of year
-StatisticsContactSubAttribute.QUARTER = Quarter
-StatisticsContactSubAttribute.QUARTER_OF_YEAR = Quarter of year
-StatisticsContactSubAttribute.REGION = Region
-StatisticsContactSubAttribute.YEAR = Year
-StatisticsContactSubAttribute.COMMUNITY = Community
-StatisticsContactSubAttribute.FACILITY = Facility
-StatisticsContactSubAttribute.PERSON_REGION = Person's region
-StatisticsContactSubAttribute.PERSON_DISTRICT = Person's district
-StatisticsContactSubAttribute.PERSON_COMMUNITY = Person's community
-StatisticsContactSubAttribute.PERSON_CITY = Person's city
-StatisticsContactSubAttribute.PERSON_POSTCODE = Person's postcode
-StatisticsContactSubAttribute.PERSON_ADDRESS = Person's address
-
 ConveyanceType.CAR = Car
 ConveyanceType.BUS = Bus
 ConveyanceType.MOTORBIKE = Motorbike
@@ -1056,25 +1036,25 @@ StatisticsCaseAttributeGroup.PERSON = Person
 StatisticsCaseAttributeGroup.PLACE = Place
 StatisticsCaseAttributeGroup.TIME = Time
 
-# StatisticsCaseSubAttribute
-StatisticsCaseSubAttribute.DATE_RANGE = Date range
-StatisticsCaseSubAttribute.DISTRICT = District
-StatisticsCaseSubAttribute.EPI_WEEK = Epi week
-StatisticsCaseSubAttribute.EPI_WEEK_OF_YEAR = Epi week of year
-StatisticsCaseSubAttribute.MONTH = Month
-StatisticsCaseSubAttribute.MONTH_OF_YEAR = Month of year
-StatisticsCaseSubAttribute.QUARTER = Quarter
-StatisticsCaseSubAttribute.QUARTER_OF_YEAR = Quarter of year
-StatisticsCaseSubAttribute.REGION = Region
-StatisticsCaseSubAttribute.YEAR = Year
-StatisticsCaseSubAttribute.COMMUNITY = Community
-StatisticsCaseSubAttribute.FACILITY = Facility
-StatisticsCaseSubAttribute.PERSON_REGION = Person's region
-StatisticsCaseSubAttribute.PERSON_DISTRICT = Person's district
-StatisticsCaseSubAttribute.PERSON_COMMUNITY = Person's community
-StatisticsCaseSubAttribute.PERSON_CITY = Person's city
-StatisticsCaseSubAttribute.PERSON_POSTCODE = Person's postcode
-StatisticsCaseSubAttribute.PERSON_ADDRESS = Person's address
+# StatisticsSubAttribute
+StatisticsSubAttribute.DATE_RANGE = Date range
+StatisticsSubAttribute.DISTRICT = District
+StatisticsSubAttribute.EPI_WEEK = Epi week
+StatisticsSubAttribute.EPI_WEEK_OF_YEAR = Epi week of year
+StatisticsSubAttribute.MONTH = Month
+StatisticsSubAttribute.MONTH_OF_YEAR = Month of year
+StatisticsSubAttribute.QUARTER = Quarter
+StatisticsSubAttribute.QUARTER_OF_YEAR = Quarter of year
+StatisticsSubAttribute.REGION = Region
+StatisticsSubAttribute.YEAR = Year
+StatisticsSubAttribute.COMMUNITY = Community
+StatisticsSubAttribute.FACILITY = Facility
+StatisticsSubAttribute.PERSON_REGION = Person's region
+StatisticsSubAttribute.PERSON_DISTRICT = Person's district
+StatisticsSubAttribute.PERSON_COMMUNITY = Person's community
+StatisticsSubAttribute.PERSON_CITY = Person's city
+StatisticsSubAttribute.PERSON_POSTCODE = Person's postcode
+StatisticsSubAttribute.PERSON_ADDRESS = Person's address
 
 # StatisticsVisualizationChartType
 StatisticsVisualizationChartType.COLUMN = Column
