--- a/sormas-rest/src/main/webapp/WEB-INF/web.xml
+++ b/sormas-rest/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,9 @@
         <role-name>HOSPITAL_INFORMANT</role-name>
     </security-role>
 	<security-role>
+        <role-name>HOSPITAL_SUPERVISOR</role-name>
+    </security-role>
+	<security-role>
         <role-name>CASE_OFFICER</role-name>
     </security-role>
 	<security-role>
